fix z-index on headers

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -180,6 +180,7 @@ main h2 {
   position: sticky;
   top: 0;
   padding-left: 6px;
+  z-index: 2;
 }
 
 main h1::before,
